Address code review feedback: add validation, optimize transactions and indexes
Co-authored-by: clabautdidier <24762167+clabautdidier@users.noreply.github.com>